--- a/Dquadrant/stable-coin/frontend/public/index.html
+++ b/Dquadrant/stable-coin/frontend/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
 
-      <title>Cardano NFT Marketplace</title>
+      <title>Cardano Stable Coin</title>
   </head>
   <body style="min-width: 250pt">
     <noscript>
